# BadmintonApp

./: .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.api  Dockerfile.postgres  Dockerfile.prod  Dockerfile.railway  Dockerfile.simple  HOBBY_DEPLOYMENT.md  Makefile  POSTS_FEATURE.md  RAILWAY_DATABASE_SETUP.md  RAILWAY_DEPLOYMENT.md  README.md  SECURE_DEPLOYMENT.md  VERCEL_DEPLOYMENT.md  alice_cookies.txt  alice_fresh_cookies.txt  bob_cookies.txt  charlie_cookies.txt  cookies.txt  debug_cookies.txt  deploy-railway.sh  deploy.sh  diana_cookies.txt  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.yml  env.example  env.prod.example  env.railway.example  final_cookies.txt  fresh_cookies.txt  init_db.py  init_railway_db.sh  main.py  main_fixed.py  main_minimal.py  mypy.ini  new_cookies.txt  (+15 more)
app/common/: enums.py
app/core/: auth.py  authorize.py  config.py  database.py  permissions.py
app/models/: __init__.py  access_control.py  medals.py  models.py  posts.py  report_views.py  reports.py  tournament_invitations.py
app/schemas/: schemas.py
app/services/: medal_service.py  post_service.py  report_service.py  tournament_invitation_service.py  user_service.py
mobile/: App.tsx  ENVIRONMENT_SETUP.md  PWA_README.md  app.json  cookies.txt  package-lock.json  package.json  start-dev.sh  start-mobile.sh  vercel.json
mobile/public/: index.html  manifest.json  sw.js  update-backend.js
mobile/scripts/: build-pwa.sh  switch-env.js
pwa/: next.config.js  package-lock.json  package.json  vercel.json
pwa/public/: sw.js  (+1 more)
tests/: conftest.py  test_config.py
(+74 files in other folders)
